<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register_screen"
    tools:context=".RegisterActivity">

    <ImageButton
        android:id="@+id/BackButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="25dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_button"
        android:onClick="comeBack"/>

    <ImageView
        android:id="@+id/icon_imageView"
        android:layout_width="133dp"
        android:layout_height="133dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.055"
        app:srcCompat="@drawable/icon_plane" />

    <TextView
        android:id="@+id/introductory_phrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/register_2"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon_imageView" />

    <EditText
        android:id="@+id/register_name"
        style="@style/EditText"
        android:layout_marginTop="20dp"
        android:hint="@string/name_client"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/introductory_phrase" />

    <EditText
        android:id="@+id/register_email"
        style="@style/EditText"
        android:layout_marginTop="10dp"
        android:hint="@string/email_client"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_name" />

    <EditText
        android:id="@+id/register_password"
        style="@style/EditText"
        android:layout_marginTop="10dp"
        android:hint="@string/password_client"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_email" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_register"
        style="@style/DarkButton"
        android:layout_marginTop="55dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_password"
        android:onClick="signInScreen"/>

</androidx.constraintlayout.widget.ConstraintLayout>