<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/account_main_screen"
    tools:context=".LikeFragment"
    android:id="@+id/account_fragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="22dp"
            android:layout_marginTop="22dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/profile"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="40sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/update_profile"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:gravity="end"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="22dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:srcCompat="@drawable/edit_button" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardCornerRadius="15dp">

            <ImageView
                android:id="@+id/roundedImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:scaleType="centerCrop"
                android:src="@drawable/photo_image_profile" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/name_textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat_semibold"
            android:textAllCaps="false"
            android:textColor="@color/black2"
            android:textSize="36sp"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:id="@+id/email_textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat_medium"
            android:textAllCaps="false"
            android:textColor="@color/gray5"
            android:textSize="18sp"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:id="@+id/city_textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat_medium"
            android:textAllCaps="false"
            android:textColor="@color/gray5"
            android:textSize="17sp" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/tgBotButton"
        style="@style/GreyButton"
        android:layout_marginTop="15dp"
        android:autoLink="web"
        android:drawableLeft="@drawable/telegram_bot_icon"
        android:text="@string/telegram_bot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/supButton"
        style="@style/GreyButton"
        android:autoLink="phone"
        android:drawableLeft="@drawable/phone_icon"
        android:text="@string/support"
        android:layout_marginTop="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tgBotButton" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_sign_out"
        style="@style/LightButton"
        android:layout_width="274dp"
        android:layout_marginBottom="75dp"
        android:text="@string/sign_out"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>