<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray2"
    tools:context=".SouvenirsActivity">

    <ImageView
        android:id="@+id/ivCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="22dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_button_white"
        android:onClick="comeBack"/>

    <TextView
        android:id="@+id/textViewCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/montserrat_semibold"
        android:textAllCaps="false"
        android:textColor="@color/main_color"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="530dp"
        android:background="@drawable/custom_layout_city"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textViewCommon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="center"
                android:text="@string/common"
                android:textAllCaps="false"
                android:textColor="@color/gray3"
                android:textSize="26sp"
                android:clickable="true"/>

            <TextView
                android:id="@+id/textViewPlaces"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="center"
                android:text="@string/places"
                android:textAllCaps="false"
                android:textColor="@color/gray3"
                android:textSize="26sp"
                android:clickable="true"/>

            <TextView
                android:id="@+id/textViewSouvenirs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="center"
                android:text="@string/souvenirs"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:clickable="true"/>
        </LinearLayout>

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="472dp"
            android:background="@drawable/custom_layout_transparency"
            android:layout_marginTop="8dp"
            android:fillViewport="true"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout3"
            app:layout_constraintStart_toStartOf="@+id/linearLayout3"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/souvenir_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_layout_place_in_city"
                    android:orientation="horizontal"
                    android:layout_marginBottom="5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:background="@color/gray_stroke"
                        android:orientation="vertical">

                        <com.google.android.flexbox.FlexboxLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:layout_gravity="center"
                            app:flexWrap="wrap"
                            app:justifyContent="flex_start"
                            android:layout_marginEnd="1dp">

                            <ImageView
                                android:id="@+id/photo_1_1"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginBottom="1dp"
                                android:scaleType="fitXY"
                                android:src="@drawable/back_button"/>

                        </com.google.android.flexbox.FlexboxLayout>

                        <com.google.android.flexbox.FlexboxLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:layout_gravity="center"
                            app:flexWrap="wrap"
                            app:justifyContent="flex_start">

                            <ImageView
                                android:id="@+id/photo_1_2"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:scaleType="fitXY"
                                android:src="@drawable/back_button"/>
                        </com.google.android.flexbox.FlexboxLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvNameSouvenir1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="3dp"
                            android:fontFamily="@font/montserrat_semibold"
                            android:textColor="@color/black"
                            android:textSize="21sp" />

                        <TextView
                            android:id="@+id/textViewDescription1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="3dp"
                            android:layout_marginEnd="3dp"
                            android:fontFamily="@font/montserrat"
                            android:paddingStart="2dp"
                            android:paddingEnd="2dp"
                            android:paddingBottom="2dp"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur."/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/souvenir_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_layout_place_in_city"
                    android:orientation="horizontal"
                    android:layout_marginBottom="5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvNameSouvenir2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="3dp"
                            android:fontFamily="@font/montserrat_semibold"
                            android:textColor="@color/black"
                            android:textSize="21sp" />

                        <TextView
                            android:id="@+id/textViewDescription2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="3dp"
                            android:layout_marginEnd="3dp"
                            android:fontFamily="@font/montserrat"
                            android:paddingStart="2dp"
                            android:paddingEnd="2dp"
                            android:paddingBottom="2dp"
                            android:textColor="@color/black"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:background="@color/gray_stroke"
                        android:orientation="vertical">

                        <com.google.android.flexbox.FlexboxLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:layout_gravity="center"
                            app:flexWrap="wrap"
                            app:justifyContent="flex_start"
                            android:layout_marginEnd="1dp">

                            <ImageView
                                android:id="@+id/photo_2_1"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginBottom="1dp"
                                android:scaleType="fitXY"
                                android:src="@drawable/back_button"/>

                        </com.google.android.flexbox.FlexboxLayout>

                        <com.google.android.flexbox.FlexboxLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:layout_gravity="center"
                            app:flexWrap="wrap"
                            app:justifyContent="flex_start">

                            <ImageView
                                android:id="@+id/photo_2_2"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:scaleType="fitXY"
                                android:src="@drawable/back_button"/>
                        </com.google.android.flexbox.FlexboxLayout>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/souvenir_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_layout_place_in_city"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:background="@color/gray_stroke"
                        android:orientation="vertical">

                        <com.google.android.flexbox.FlexboxLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:layout_gravity="center"
                            app:flexWrap="wrap"
                            app:justifyContent="flex_start"
                            android:layout_marginEnd="1dp">

                            <ImageView
                                android:id="@+id/photo_3_1"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginBottom="1dp"
                                android:scaleType="fitXY"
                                android:src="@drawable/back_button"/>

                        </com.google.android.flexbox.FlexboxLayout>

                        <com.google.android.flexbox.FlexboxLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:layout_gravity="center"
                            app:flexWrap="wrap"
                            app:justifyContent="flex_start">

                            <ImageView
                                android:id="@+id/photo_3_2"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:scaleType="fitXY"
                                android:src="@drawable/back_button"/>
                        </com.google.android.flexbox.FlexboxLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvNameSouvenir3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="3dp"
                            android:fontFamily="@font/montserrat_semibold"
                            android:textColor="@color/black"
                            android:textSize="21sp" />

                        <TextView
                            android:id="@+id/textViewDescription3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="3dp"
                            android:layout_marginEnd="3dp"
                            android:fontFamily="@font/montserrat"
                            android:paddingStart="2dp"
                            android:paddingEnd="2dp"
                            android:paddingBottom="2dp"
                            android:textColor="@color/black"
                            android:textSize="14sp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>